--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo</title>
 
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <!-- style -->
+    <link rel="stylesheet" href="style.scss">
+    <!-- Vue 3 -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -16,12 +22,26 @@
         <div class="container">
             <h1>Todo</h1>
 
-            {{ message }}
+            <ul>
+                <li v-for="todo in todos" :class="todo.done ? 'done' : ''">
+                    {{ todo.text }}
+                </li>
+            </ul>
+
+            <div class="input-group mb-3" @keyup.enter="addTodo()">
+                <span class="input-group-text" id="basic-addon1">New todo</span>
+                <input v-model="newTodoText" type="text" class="form-control" placeholder="Write text here..."
+                    aria-label="new-todo" aria-describedby="basic-addon1">
+                <button @click="addTodo()" class="btn btn-primary">Add</button>
+            </div>
+
         </div>
     </div>
 
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <!-- script -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
