--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- style -->
     <link rel="stylesheet" href="style.scss">
     <!-- Vue 3 -->
@@ -22,10 +24,10 @@
         <div class="container">
             <h1>Todo</h1>
 
-            <ul>
-                <li v-for="(todo, index) in todos" class="task" :class="todo.done ? 'done' : ''"
-                    @click="toggleTaskDone(index)">
-                    {{ todo.text }}
+            <ul id="task-list">
+                <li v-for="(todo, index) in todos" class="task" :class="todo.done ? 'done' : ''">
+                    <span class="task-text" @click="toggleTaskDone(index)">{{ todo.text }}</span>
+                    <i class="task-delete fa-regular fa-trash-can" @click="deleteTodo(index)"></i>
                 </li>
             </ul>
 
