--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="app">
-        <div class="container">
+        <div class="container d-flex flex-column align-items-center">
             <h1>Todo List</h1>
 
             <ul id="task-list" class="list-group w-50 mb-3">
